# aoc2021

./: Makefile  README.md  aoc2021-bench.html  get-inputs.main.kts  hyperfine.md  index.md
.github/workflows/: get-inputs.yml  hs-bench.yml  hs-docs.yml  hs.yml  hyperfine.yml  kt-bench.yml  kt-docs.yml  kt.yml  py-bench.yml  py.yml  rs-bench.yml  rs.yml
_data/benchmarks/: jsBench.json  jvmBench.json
criterion/: index.html
criterion/day 1 part 1/: index.html
criterion/day 1 part 2/: index.html
criterion/day 10 part 1/: index.html
criterion/day 10 part 2/: index.html
criterion/day 11/: index.html
criterion/day 11 solve/: index.html
criterion/day 12/: index.html
criterion/day 12 part 1/: index.html
criterion/day 12 part 2/: index.html
criterion/day 13 part 1/: index.html
criterion/day 13 part 2/: index.html
criterion/day 14/: index.html
criterion/day 14 part 1/: index.html
criterion/day 14 part 2/: index.html
criterion/day 15 part 1/: index.html
criterion/day 15 part 2/: index.html
criterion/day 16/: index.html
criterion/day 16 part 1/: index.html
criterion/day 16 part 2/: index.html
criterion/day 17/: index.html
criterion/day 17 solve/: index.html
criterion/day 18 part 1/: index.html
criterion/day 18 part 2/: index.html
criterion/day 19/: index.html
criterion/day 19 solve/: index.html
criterion/day 2 part 1/: index.html
criterion/day 2 part 2/: index.html
criterion/day 20/: index.html
criterion/day 22/: index.html
criterion/day 23/: index.html
criterion/day 24/: index.html
criterion/day 25/: index.html
criterion/day 3 part 1/: index.html
criterion/day 3 part 2/: index.html
criterion/day 4/: index.html
criterion/day 4 part 1/: index.html
criterion/day 4 part 2/: index.html
dokka/: index.html  navigation.html
haddock/: Common.html  Day1.html  Day10.html  Day11.html  Day12.html  Day13.html  Day14.html  Day15.html  Day16.html  Day17.html  Day18.html  Day19.html  Day2.html  Day20.html  Day21.html  Day22.html  Day23.html  Day24.html  Day25.html  Day3.html  Day4.html  Day5.html  Day6.html  Day6Meta.html  Day7.html  Day8.html  Day9.html  aoc2021.haddock  aoc2021.txt  doc-index.html  doc-index.json  index.html
hs/: .ghcid  .gitignore  ChangeLog.md  README.md  f  package.yaml  stack.yaml
hyperfine/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  all.md
jmh-visualizer/: provided.js
kt/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
py/: .gitignore  LICENSE  README.md  pyproject.toml
py/aoc2021/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  main.py
py/tests/: test_benchmark.py
rs/: Cargo.toml  README.md  build.rs
(+730 files in other folders)
