[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
license = "BSD-2-Clause"
authors = ["Daniel Lin <ephemient@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ephemient/aoc2021/tree/main/py"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent"
]
include = ["aoc2021/day*.txt"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.11.0"
pytest = "^6.2.5"
pytest-benchmark = { version = "^3.4.1", extras = ["histogram"] }

[tool.poetry.scripts]
aoc2021 = "aoc2021.main:main"

[tool.poetry.plugins."aoc2021.days"]
1 = "aoc2021.day1:parts"
2 = "aoc2021.day2:parts"
3 = "aoc2021.day3:parts"
4 = "aoc2021.day4:parts"
5 = "aoc2021.day5:parts"
6 = "aoc2021.day6:parts"
7 = "aoc2021.day7:parts"
8 = "aoc2021.day8:parts"
9 = "aoc2021.day9:parts"
10 = "aoc2021.day10:parts"
11 = "aoc2021.day11:parts"
12 = "aoc2021.day12:parts"
13 = "aoc2021.day13:parts"
14 = "aoc2021.day14:parts"
15 = "aoc2021.day15:parts"
16 = "aoc2021.day16:parts"
17 = "aoc2021.day17:parts"
18 = "aoc2021.day18:parts"
19 = "aoc2021.day19:parts"
20 = "aoc2021.day20:parts"
21 = "aoc2021.day21:parts"
22 = "aoc2021.day22:parts"
23 = "aoc2021.day23:parts"
24 = "aoc2021.day24:parts"
25 = "aoc2021.day25:parts"

[tool.black]
target_version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = '--doctest-modules --benchmark-disable --benchmark-sort=fullname'
required_plugins = ['pytest-benchmark']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
